# oop_exercise_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cidependencies.txt  dependencies.txt
.circleci/: README.md  config.yml
app/: CMakeLists.txt  README.md  main.cpp
cmake/: config.cmake  lib.cmake  tests.cmake
include/: README.md  example.hpp
src/: CMakeLists.txt  README.md  keep.c
tests/: CMakeLists.txt  CMakeLists.txt.in  README.md  test_example.cpp
